# module89

./: CMakeLists.txt  install_requirements.sh  package.xml
config/: camera_config.json  dataset_config.json  model_config.json
docker/: Dockerfile.aarch64.base
docker/scripts/: workspace-entrypoint.sh
docker/tensor_rt/: trtexec_x86_64
docker/vpi/: vpi-dev-1.1.11-cuda11-x86_64-linux.deb
document/: main.aux  main.out  main.ptc  main.tex  main.toc
include/module89/: dnn_image_encoder_node.hpp  tensor_rt_node.hpp
launch/: camera.launch.py  dataset.launch.py  dope.launch.py  isaac_ros_dope_tensor_rt.launch.py  main.launch.py  test.launch.py  test_old.launch.py
models/: 00001.json  label_map_chessboard.pbtxt
msg/: ChessboardImgPose.msg
rviz/: viz.rviz
scripts/: Commu_Narwhal.py  Communication.py  FENTOBOARD.py  GameController.py  UdpComms.py  camera.py  camera_fake.py  camera_sim.py  chess_client.py  chess_engine.py  chessai_fake.py  chessboard_classifier.py  chessboard_classifier_edit.py  chessboard_detector.py  chessboard_detector_fake.py  chessboard_encoder_fake.py  chessboard_estimator.py  chessboard_locator.py  chessboard_locator_dope.py  chessboard_tracker.py  chessboard_tracker_old.py  client_chessboard_locator.py  convert_model.sh  dataset_gatherer.py  dope_converter.py  dope_converter_batch.py  dope_converter_v2_batch.py  dope_converter_v3_batch.py  dope_converter_v4_batch.py  dope_converter_v5_batch.py  encoder_dynamixel.py  example_client.py  example_service.py  hand_detector.py  onnx_inference.py  onnx_inference_1080p.py  onnx_inference_batch.py  onnx_inference_preprocess.py  onnx_test.py  pseudo_state.py  (+16 more)
scripts/engine_test/: aaa.py  engine.py  fen_set.npy  move_list_set.npy  pseudo.ipynb  test_case_information  testcase.py
scripts/stopfish/: Makefile  search.cpp
scripts/utils/: convert_ndds2custom.py  dataset_capture.py  dataset_create.py  dataset_editor.py  dataset_editor_1_add_color.py  dataset_editor_1_export_side_top.py  dataset_editor_1_export_top_random.py  dataset_editor_2_divide_shard_color.py  dataset_editor_2_divide_shard_side_top.py  dataset_editor_2_divide_shard_top_random.py  dataset_editor_2_open_side_top.py  dataset_editor_3_open_side_top.py  dataset_editor_4_open_shard_shuffle.py  (+22 more)
src/: dnn_image_encoder_main.cpp  dnn_image_encoder_node.cpp  tensor_rt_node.cpp
srv/: ChessboardDetection.srv  ChessboardPose.srv  ClusterLock.srv  ExecuteBestMove.srv  FindBestMove.srv  FindChessboardPose.srv  PoseLock.srv  PseudoBoardSetup.srv
(+10 files in other folders)
